--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/pwa": "^0.13.6",
     "@angular/router": "^6.0.3",
     "bootstrap": "^4.3.0",
     "core-js": "^2.5.4",
